--- a/_config.yml
+++ b/_config.yml
@@ -9,6 +9,6 @@ url: "https://pqca.github.io/TAC/"
 footer_content: "<a href=\"https://github.com/PQCA/TAC\">Page generated from TAC repo on GitHub</a>"
 aux_links:
   "GitHub":
-    - "//github.com/PQCA/toc"
+    - "//github.com/PQCA/TAC"
   "Chat":
     - "https://discord.gg/xyVnwzfg5R/"
